fixed tab name and testing links to new tab

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Zirdi Syukur</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -227,7 +227,7 @@
 								</div>
 								<div class = "col-4">
 									<article class = "item">
-										<a target="_blank" href="m33x7BH.pdf" download class="image fit"><img src="images/m33expl.png" alt="" /></a>
+										<a target="_top" href="m33x7BH.pdf" download class="image fit"><img src="images/m33expl.png" alt="" /></a>
 										<header>
 											<h3>My song about the M33 X-7 Black Hole Binary <br />(and other music)</h3>
 										</header>
