Fixing colors and links

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Prologue by HTML5 UP
+	Zirdi Syukur
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -87,9 +87,9 @@
 							</header>
 									<p>I am a first year undergraduate student at Yale-NUS College in Singapore. I intend to major in Physical Sciences with a focus in physics. I am expecting to graduate by April 2023. 
 									<br />	<br />	
-									I have most recently been exploring astronomy through my research with Professor Chelsea Sharon at Yale-NUS College where I construct a radio telescope to detect hydrogen line emissions to test Singapore's radio frequency interference and the feasibility of radio astronomy. During the summer of 2020 I am continuing this research alongside participating in the Introduction to Astronomy course held by Howard Isaacson, a researcher from Berkeley.
+									I have most recently been exploring astronomy through my research with Professor Chelsea Sharon at Yale-NUS College where I construct a radio telescope to detect hydrogen line emissions to test Singapore's radio frequency interference and the feasibility of radio astronomy. During the summer of 2020, I am continuing this research alongside participating in the Introduction to Astronomy course held by Howard Isaacson, a professional astronomer from Berkeley.
 									<br />	<br />	
-									I am also interested in particle physics, stemming from my time spent during the summer 2018 doing a summer pre-collegiate program. I love playing guitar, hiphop dance, and I use he/him/his pronouns.</p>
+									I am also interested in particle physics, stemming from my time spent during a summer (2018) pre-collegiate program. I love playing guitar, hiphop dance, and I use he/him/his pronouns.</p>
 								</div>
 								<div class = 'col-6'>
 									<a href="#" class="image featured"><img src="images/avatar.jpeg" style = "float:right" alt="" /></a>
@@ -219,7 +219,7 @@
 							<div class = "row">
 								<div class = "col-4">
 									<article class = "item">
-										<a href="https://youtu.be/AeVQ3rC1Xdw" class="image fit"><img src="images/m33song.png" alt="" /></a>
+										<a target="_blank" href="https://youtu.be/AeVQ3rC1Xdw" class="image fit"><img src="images/m33song.png" alt="" /></a>
 										<header>
 											<h3>My song about the M33 X-7 Black Hole Binary <br />(and other music)</h3>
 										</header>
@@ -227,9 +227,9 @@
 								</div>
 								<div class = "col-4">
 									<article class = "item">
-										<a target="_top" href="m33x7BH.pdf" download class="image fit"><img src="images/m33expl.png" alt="" /></a>
+										<a target="_blank" href="m33x7BH.pdf" download class="image fit"><img src="images/m33expl.png" alt="" /></a>
 										<header>
-											<h3>My song about the M33 X-7 Black Hole Binary <br />(and other music)</h3>
+											<h3>explanationing the song's symbolism that characterizes the parameters and behaviors of the black hole</h3>
 										</header>
 									</article>
 								</div>
