made the mobile text size smaller and about section more compact

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
 				<!-- About Me -->
 					<section id="about" class="three">
 						<div class="container">
-							<div class="row">
-
+							<div class="row visibledesktop">
+								<!--desktop-->
 								<div class = 'col-6'>
 									<header>
-								<h2>About Me</h2>
-							</header>
+										<h2>About Me</h2>
+									</header>
 									<p>I am a first year undergraduate student at Yale-NUS College in Singapore. I intend to major in Physical Sciences with a focus in physics. I am expecting to graduate by April 2023. 
 									<br />	<br />	
 									I have most recently been exploring astronomy through my research with Professor Chelsea Sharon at Yale-NUS College where I construct a radio telescope to detect hydrogen line emissions to test Singapore's radio frequency interference and the feasibility of radio astronomy. During the summer of 2020, I am continuing this research alongside participating in the Introduction to Astronomy course held by Howard Isaacson, a professional astronomer from Berkeley.
@@ -92,8 +92,27 @@
 									I am also interested in particle physics, stemming from my time spent during a summer (2018) pre-collegiate program. I love playing guitar, hiphop dance, and I use he/him/his pronouns.</p>
 								</div>
 								<div class = 'col-6'>
-									<a href="#" class="image featured"><img src="images/avatar.jpeg" style = "float:right" alt="" /></a>
+									<a class="image featured"><img src="images/avatar.jpeg" style="float:right" alt="" /></a>
 								</div>
+								
+							</div>
+							<!--mobile-->
+							<div class="row visibledevice">
+
+								<div class = 'col-6-mobile'>
+									<header>
+										<h2 style="float:left">About Me</h2>
+									</header>
+								</div>
+								<div class = 'col-6'>
+									<a class="image avatar48about"><img  style = "verticle=align:middle" src="images/avatar_square.jpeg" alt="" /></a>
+								</div>
+
+									<p>I am a first year undergraduate student at Yale-NUS College in Singapore. I intend to major in Physical Sciences with a focus in physics. I am expecting to graduate by April 2023. 
+									<br />	<br />	
+									I have most recently been exploring astronomy through my research with Professor Chelsea Sharon at Yale-NUS College where I construct a radio telescope to detect hydrogen line emissions to test Singapore's radio frequency interference and the feasibility of radio astronomy. During the summer of 2020, I am continuing this research alongside participating in the Introduction to Astronomy course held by Howard Isaacson, a professional astronomer from Berkeley.
+									<br />	<br />	
+									I am also interested in particle physics, stemming from my time spent during a summer (2018) pre-collegiate program. I love playing guitar, hiphop dance, and I use he/him/his pronouns.</p>
 								
 							</div>
 						</div>
