fixing previous commit's failure again

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 									</header>
 								</div>
 								<div class = 'col-6'>
-									<a class="image avatar48about"><img  style = "verticle=align:middle" src="images/avatar_square.jpeg" alt="" /></a>
+									<a class="image avatar48about"><img  style = "verticle-align:middle" src="images/avatar_square.jpeg" alt="" /></a>
 								</div>
 
 									<p>I am a first year undergraduate student at Yale-NUS College in Singapore. I intend to major in Physical Sciences with a focus in physics. I am expecting to graduate by April 2023. 
