--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 									</header>
 								</div>
 								<div class = 'col-6'>
-									<a class="image avatar48about"><img  style = "verticle-align:middle" src="images/avatar_square.jpeg" alt="" /></a>
+									<a class="image avatar48about"><img  src="images/avatar_square.jpeg" style="float:right" alt="" /></a>
 								</div>
 
-									<p>I am a first year undergraduate student at Yale-NUS College in Singapore. I intend to major in Physical Sciences with a focus in physics. I am expecting to graduate by April 2023. 
+									<p>I'm a first year undergraduate student at Yale-NUS College in Singapore. I intend to major in Physical Sciences with a focus in physics. I am expecting to graduate by April 2023. 
 									<br />	<br />	
 									I have most recently been exploring astronomy through my research with Professor Chelsea Sharon at Yale-NUS College where I construct a radio telescope to detect hydrogen line emissions to test Singapore's radio frequency interference and the feasibility of radio astronomy. During the summer of 2020, I am continuing this research alongside participating in the Introduction to Astronomy course held by Howard Isaacson, a professional astronomer from Berkeley.
 									<br />	<br />	
