removed some contact links as per advice from IntroToAstro2020

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a target="_blank" href="https://twitter.com/ZirdiBirdy" class="icon brands fa-twitter"><span class="label">	 Twitter</span></a></li>
-							<li><a target="_blank" href="https://www.facebook.com/zirdi.syukur/" class="icon brands fa-facebook-f"><span class="	label">Facebook</span></a></li>
+							<!--<li><a target="_blank" href="https://twitter.com/ZirdiBirdy" class="icon brands fa-twitter"><span class="label">	 Twitter</span></a></li>-->
+							<!--<li><a target="_blank" href="https://www.facebook.com/zirdi.syukur/" class="icon brands fa-facebook-f"><span class="	label">Facebook</span></a></li>-->
 							<li><a target="_blank" href="https://github.com/zirdisyukur" class="icon brands fa-github"><span class="label">Github</span></a></	li>
 							<li><a href="#" class="icon brands fa-linkedin"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
@@ -267,12 +267,12 @@
 							<div class="bottom">
 
 							<h5><strong>Email:</strong> zirdisyukur@u.yale-nus.edu.sg</h5>
-							<h5><strong>Phone:</strong> +65 8893 0336</h5>
+							<!--<h5><strong>Phone:</strong> +65 8893 0336</h5>-->
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a target="_blank" href="https://twitter.com/ZirdiBirdy" class="icon brands fa-twitter"><span class="label">	 Twitter</span></a></li>
-							<li><a target="_blank" href="https://www.facebook.com/zirdi.syukur/" class="icon brands fa-facebook-f"><span class="	label">Facebook</span></a></li>
+							<!--<li><a target="_blank" href="https://twitter.com/ZirdiBirdy" class="icon brands fa-twitter"><span class="label">	 Twitter</span></a></li>-->
+							<!--<li><a target="_blank" href="https://www.facebook.com/zirdi.syukur/" class="icon brands fa-facebook-f"><span class="	label">Facebook</span></a></li>-->
 							<li><a target="_blank" href="https://github.com/zirdisyukur" class="icon brands fa-github"><span class="label">Github</span></a></	li>
 							<li><a target="_blank" href="https://www.linkedin.com/in/m-zirdi-syukur-28a2ab1a2/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="mailto: zirdisyukur@u.yale-nus.edu.sg" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
