updating with new stuff for portfolio!

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar_square.jpeg" alt="" /></span>
 							<h1 id="title">M. Zirdi Syukur</h1>
-							<p>Undergraduate Researcher <br />Yale-NUS College</p>
+							<p>Undergraduate Researcher <br />Yale-NUS College <br /> he/him/his</p>
 						</div>
 
 					<!-- Nav -->
@@ -85,9 +85,12 @@
 									<header>
 										<h2>About Me</h2>
 									</header>
-									<p>I am a first year undergraduate student at Yale-NUS College in Singapore. I intend to major in Physical Sciences with a focus in physics. I am expecting to graduate by April 2023. 
+									<p>I am a third year undergraduate student at Yale-NUS College in Singapore. I am majoring in Physical Sciences with a focus in physics. I am expecting to graduate by April 2023. 
 									<br />	<br />	
-									I have most recently been exploring astronomy through my research with Professor Chelsea Sharon at Yale-NUS College where I construct a radio telescope to detect hydrogen line emissions to test Singapore's radio frequency interference and the feasibility of radio astronomy. During the summer of 2020, I am continuing this research alongside participating in the Introduction to Astronomy course held by Howard Isaacson, a professional astronomer from Berkeley.
+									In my first year, I explored astronomy through my research with Professor Chelsea Sharon at Yale-NUS College where I construct a radio telescope
+									 to detect hydrogen line emissions to test Singapore's radio frequency interference and the feasibility of radio astronomy. During the summer of 2020, 
+									 I am continued this research alongside participating in the Introduction to Astronomy course held by Howard Isaacson, a professional astronomer from Berkeley.
+									 In my second year I have been working on an electromagnet design with Professor Ben Olsen.
 									<br />	<br />	
 									I am also interested in particle physics, stemming from my time spent during a summer (2018) pre-collegiate program. I love playing guitar, hiphop dance, and I use he/him/his pronouns.</p>
 								</div>
@@ -126,11 +129,21 @@
 								<h2>Research</h2>
 							</header>
 
-							<p>One of the most important wavelengths for research in radio astronomy is 21cm. Galaxies are filled with neutral atomic hydrogen gas that emits strongly at this wavelength, making it an invaluable tool for research on nearby galaxies' structures, dynamics, and star formation rates. This wavelength is protected by international agreements but some countries are more zealous spectrum protectors than others. In this project, I make improvements to a small, portable, feed-horn style radio telescope  in order to characterize the radio frequency interference (RFI) environment in Singapore near 21cm and to determine whether it would be useful to build a larger telescope on the Yale-NUS campus for teaching purposes in the future. </p>
+
+							<header>
+								<h3>Building and testing a radio telescope</h3> <a target="_blank" href="telescopePresentation.pptx" download class="button scrolly">Download Presentation</a>
+							</header>
+
+							<p>One of the most important wavelengths for research in radio astronomy is 21cm. Galaxies are filled with neutral atomic hydrogen gas that emits strongly at this wavelength, 
+								making it an invaluable tool for research on nearby galaxies' structures, dynamics, and star formation rates. This wavelength is protected by international agreements 
+								but some countries are more zealous spectrum protectors than others. In this project, I make improvements to a small, portable, feed-horn style radio telescope  
+								in order to characterize the radio frequency interference (RFI) environment in Singapore near 21cm and to determine whether it would be useful to build a larger 
+								telescope on the Yale-NUS campus for teaching purposes in the future. Click here to download my presentation on the research</p>
+									
 							<div class = "row">
 								<div class = "col-6">
 									<article class = "item">
-										<a target="_blank" href="http://wvurail.org/cra/Files_uploaded/DSPIRA_Horn_Assembly_2019.pdf" class="image fit"><img src="images/IMG_8601.jpeg" alt="" /></a>
+										<a target="_blank" href="https://www.linkedin.com/posts/yale-nus-college_over-the-semester-break-mohammad-zirdi-syukur-activity-6712178714014310400-nzZl" class="image fit"><img src="images/telescopeselfie.jpeg" alt="" /></a>
 										<header>
 											<h3>The Constructed Radio Telescope</h3>
 										</header>
@@ -151,6 +164,45 @@
 									</article>
 								</div>
 							</div>
+
+							<header>
+								<h3>Direct-Current electromagnet field simulations/design</h3>
+							</header>
+
+							<p>At Yale-NUS College, Professor Ben Olsen has been steadily constructing a bitter-type electromagnet for future ultracold quantum gas experiments with alkali atoms. To enable to apparatus
+								to conduct future experiments of varying types, it is required that the magnetic fields produced by the electromagnets msut be strong, quick, and flexible to different configurations. Example future experiments include probing
+								exotic quantum phases of matter or studying many-body spin dynamics. To help achieve this goal,
+								I am working with Professor Olsen in simulating various designs of a section of the electromagnets called the Bias and Curvature coils, the coils responsible for trapping near 0 kelvin alkali atoms for studying.
+								I am charged with converting existing simulations in Mathematica into Julia code, whose quickness in scientific computation aids to our purpose of optimizing digital designs of the electromagnets before manufacturing.
+								On top of simulating the magnetic fields, I am developing the code necessary to provide interactive and understandable visualizations of the geometry and currents of the electromagnets. The goal is to release developed
+								code with documentation as to how to use such functions.
+							</p>
+
+							<div class = "row">
+								<div class = "col-6">
+									<article class = "item">
+										<a target="_blank" href="https://olsenlab.science/index.html" class="image fit"><img src="images/BCMathematica.png" alt="" /></a>
+										<header>
+											<h3>The initial render of the electromagnets in Matematica</h3>
+										</header>
+									</article>
+								</div>
+								<div class = "col-6">
+									<article class = "item">
+										<a target="_blank" href="https://github.com/0xCoto/VIRGO" class="image fit"><img src="images/BCJulia.gif" alt="" /></a>
+										<header>
+											<h3>Animation of building the current's simulated inside electromagnets</h3>
+										</header>
+									</article>
+									<article class = "item">
+										<a target="_blank" href="https://www.researchgate.net/publication/258250430_Efficient_continuous-duty_Bitter-type_electromagnets_for_cold_atom_experiments" class="image fit"><img src="images/bitterType.gif" alt="" /></a>
+										<header>
+											<h3>Read about bitter-type electromagnets</h3>
+										</header>
+									</article>
+								</div>
+							</div>
+						
 							<!--
 							<div class="row">
 								<div class="col-4 col-12-mobile">
@@ -221,10 +273,36 @@
 						<div class="container">
 
 							<header>
-								<h2>Publications</h2>
+								<h2>Publications and Reports</h2>
 							</header>
 
-							<p>Coming soon ;)</p>
+							<div class = "row">
+								<div class = "col-4">
+									<article class = "item">
+										<a target="_blank" href="teethProbeProject.pdf" class="image fit"><img src="images/teethProbeProject.png" alt="" /></a>
+										<header>
+											<h3>Final experiment report on probing dental carries using light spectroscopy for Experimental Methods Class</h3>
+										</header>
+									</article>
+								</div>
+								<div class = "col-4">
+									<article class = "item">
+										<a target="_blank" href="Lab 4 Effects.docx" download class="image fit"><img src="images/guitar.jpeg" alt="" /></a>
+										<header>
+											<h3>Simple lab blurb for Physics of Electric guitar class describing how guitar pedals change the waveform of guitar sounds</h3>
+										</header>
+									</article>
+								</div>
+								<div class = "col-4">
+									<article class = "item">
+										<a target="_blank" href="SI2 Team Poster.png" download class="image fit"><img src="images/SI2 Team Poster copy.png" alt="" /></a>
+										<header>
+											<h3>Infographic with data-backed claims that climate change-induced tropical cyclone intensities will increase, having adverse effects on many ecosystems</h3>
+										</header>
+									</article>
+								</div>
+							</div>
+
 						</div>
 					</section>
 				<!-- other -->
@@ -236,6 +314,46 @@
 							</header>
 
 							<div class = "row">
+								<div class = "col-4">
+									<article class = "item">
+										<a target="_blank" download class="image fit"><img src="images/tutor.jpeg" alt="" /></a>
+										<header>
+											<h3>I am available for private tutoring in mathematics and physics!</h3>
+										</header>
+									</article>
+								</div>
+								<div class = "col-4">
+									<article class = "item">
+										<a target="_blank" href="https://open.spotify.com/artist/55gI9Vfk3VYOqEmhaMI4pN?si=RBOCtjwYSPK2E2aNdOGmAw&dl_branch=1" download class="image fit"><img src="images/EP.JPG" alt="" /></a>
+										<header>
+											<h3>My first EP with songs that draw inspiration from the sky</h3>
+										</header>
+									</article>
+								</div>
+								<div class = "col-4">
+									<article class = "item">
+										<a target="_blank" href="" download class="image fit"><img src="images/goodReads.png" alt="" /></a>
+										<header>
+											<h3>Interesting reads!</h3>
+										</header>
+									</article>
+								</div>
+								<div class = "col-4">
+									<article class = "item">
+										<a target="_blank" href="https://www.facebook.com/tiwala.productions" download class="image fit"><img src="images/tiwala.jpeg" alt="" /></a>
+										<header>
+											<h3>Original musical made by friends for which I produced some songs</h3>
+										</header>
+									</article>
+								</div>
+								<div class = "col-4">
+									<article class = "item">
+										<a target="_blank" href="https://github.com/howardisaacson/Introduction-to-Astronomy-Research-2018" download class="image fit"><img src="images/telescope.png" alt="" /></a>
+										<header>
+											<h3>Interesting introduction to astronomy course I did with a berkeley professor the summer of 2019</h3>
+										</header>
+									</article>
+								</div>
 								<div class = "col-4">
 									<article class = "item">
 										<a target="_blank" href="https://youtu.be/AeVQ3rC1Xdw" class="image fit"><img src="images/m33song.png" alt="" /></a>
