Updating bio and emails

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar_square.jpeg" alt="" /></span>
 							<h1 id="title">M. Zirdi Syukur</h1>
-							<p>Undergraduate Researcher <br />Yale-NUS College <br /> he/him/his</p>
+							<p>Research Engineer <br />IMRE, A*STAR <br /> he/him/his</p>
 						</div>
 
 					<!-- Nav -->
@@ -85,14 +85,22 @@
 									<header>
 										<h2>About Me</h2>
 									</header>
-									<p>I am a third year undergraduate student at Yale-NUS College in Singapore. I am majoring in Physical Sciences with a focus in physics. I am expecting to graduate by April 2023. 
+									<p>My name is M. Zirdi Syukur (he/him), a young indonesian professional currently working in physics research. 
+										I am a research engineer and specialist at the Institute of Materials Research and Engineering (IMRE), A*STAR. My working group, in
+										the Quantum Technologies for Engineering (QTE) division, works towards building the next generation atomic magnetometers,
+										capable of measuring magnetic fields with fT/sqrt(Hz) sensitivities. Additionally, we aim to use the same magnetometer to build
+										ultra-precise gyroscopes. I am a recent graduate of Yale-NUS College in Singapore, with an honors, cum laude, degree in the
+										physical sciences. I am currently most interested in magnetometery, particle physics, audio signal processing, and using physics
+										for sustainable energy systems. 
 									<br />	<br />	
-									In my first year, I explored astronomy through my research with Professor Chelsea Sharon at Yale-NUS College where I construct a radio telescope
+									At Yale-NUS College, I undertook various extra-curricular research projects: In my first year,
+									 I explored astronomy through my research with Professor Chelsea Sharon at Yale-NUS College where I constructed a radio telescope
 									 to detect hydrogen line emissions to test Singapore's radio frequency interference and the feasibility of radio astronomy. During the summer of 2020, 
-									 I am continued this research alongside participating in the Introduction to Astronomy course held by Howard Isaacson, a professional astronomer from Berkeley.
-									 In my second year I have been working on an electromagnet design with Professor Ben Olsen.
+									 I continued this research alongside participating in the Introduction to Astronomy course held by Howard Isaacson, a professional astronomer from Berkeley.
+									 From my second to final year, I worked with professor Ben Olsen to aid with electromagnet design for his ultra-cold quantum gas experiment.
+									 This research also became my final year capstone thesis.
 									<br />	<br />	
-									I am also interested in particle physics, stemming from my time spent during a summer (2018) pre-collegiate program. I love playing guitar, hiphop dance, and I use he/him/his pronouns.</p>
+									Outside of physics I love playing guitar, dancing to hiphop, and playing table top board games.</p>
 								</div>
 								<div class = 'col-6'>
 									<a class="image featured"><img src="images/avatar.jpeg" style="float:right" alt="" /></a>
@@ -384,7 +392,9 @@
 
 							<div class="bottom">
 
-							<h5><strong>Email:</strong> zirdisyukur@u.yale-nus.edu.sg</h5>
+							<h5><strong>Emails:</strong><br> zirdisyukur@u.yale-nus.edu.sg <br> mohammad_zirdi_syukur@imre.a-star.edu.sg</h5>
+							
+
 							<!--<h5><strong>Phone:</strong> +65 8893 0336</h5>-->
 
 					<!-- Social Icons -->
